--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -119,7 +119,9 @@
     "second": "Second",
     "start": "Start",
     "single": "Single",
-    "basis": "Alap"
+    "basis": "Alap",
+    "colop": "Cölöp",
+    "fejléc": "Tétel"
     
   },
   "dashboards": {
