--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -127,7 +127,8 @@
     "add": "Új",
     "alapozas": "Alapozás",
     "savalap": "Sávalap",
-    "alaplemez": "Alaplemez"
+    "alaplemez": "Alaplemez",
+    "ajanlat": "ajánlat"
     
   },
   "dashboards": {
